syntax="proto3";
package kv;
import "google/api/annotations.proto";
option go_package = "./proto/kv";

message GetKVRequest {
  string key = 1; 
}

message GetKVResponse {
  string message = 1; 
  int64 statusCode = 2; 
  string value = 3;
}

message SetKeyValueRequest {
  string key = 1;
  string value = 2;
}

message SetKeyValueResponse {
  string message = 1;
  int64 statusCode = 2;
}

message DeleteKeyValueRequest{
  string key = 1;
}

message DeleteKeyValueResponse{
  string message = 1;
  int64 statusCode = 2;
}

service KeyValueStore {
  rpc GetKeyValue(GetKVRequest) returns (GetKVResponse) {
      option (google.api.http) = {
          get: "/api/kv/{key}"
      };
  }
  rpc SetKeyValue(SetKeyValueRequest) returns (SetKeyValueResponse) {
      option (google.api.http) = {
          post: "/api/kv"
          body: "*"
      };
  }
  rpc DeleteKeyValue(DeleteKeyValueRequest) returns (DeleteKeyValueResponse) {
      option (google.api.http) = {
          delete: "/api/kv/{key}"
      };
  }
}
